<resources>
    <string name="app_name">Leafdex</string>
    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="motto">Connecting plantitos and plantitas</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="fp">Forgot password?</string>
    <string name="not_registered">Not yet registered?</string>
    <string name="account_creation">Account Creation</string>
    <string name="fn">First name</string>
    <string name="ln">Last name</string>
    <string name="cp">Confirm Password</string>
    <string name="contact_no">Contact Number</string>
    <string name="sex">Sex</string>
    <string name="Birthdate">Birthdate</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expound_details">Learn</string>
    <string name="plant_info">Plant Information</string>
    <string name="post_description">Post Description</string>
    <string name="post_plant">Post Plant</string>
    <string name="price">Price</string>
    <string name="qty">Quantity</string>
    <string name="pm">Send Message</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="change_pass">Change Password</string>
    <string name="yp">Your Posts</string>
    <string name="sp">Saved Posts</string>
    <string name="abt">About</string>
    <string name="abt_plantnet">About Pl@ntNet API</string>
    <string name="leafdex_abt">We are committed to providing a platform for people who loves plants. Leafdex is designed in such a way that makes it possible for users to collaborate, trade and learn.</string>
    <string name="plantnet_abt">The Pl@ntNet API is a RESTful JSON based API.
        This API allows you to use Pl@ntNet\'s visual identification engine as a Web service.
        It currently operates on 40,257 vascular plant species.
        The list of recognizable species is growing regularly thanks to the contributions of the community and the integration of expert databases.</string>
    <string name="plantnet_policy">
        The use of the Pl@ntNet API is: \n
        *Free up to 500 identification requests per day (for any usage) \n
        *Paying for a commercial usage beyond 500 identification requests per day \n
        *Free for specific non-profit educational and scientific purposes
    </string>
    <string name="characteristics">Characteristics</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="common_name">Common Name</string>
    <string name="plant_description">Plant Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>